firefox fix scrollbar

--- a/src/pages/Posts/Posts.css
+++ b/src/pages/Posts/Posts.css
@@ -6,6 +6,8 @@
 
     overflow: auto;
     box-sizing: border-box;
+
+    scrollbar-width: none;
 }
 
 .posts__wrap::-webkit-scrollbar {
